# rccl

./: install.sh
src/: debug.cc  enqueue.cc  init.cc
src/collectives/device/: primitives.h
src/graph/: paths.cc  topo.cc  tuning.cc  xml.cc
src/include/: comm.h
src/transport/: net_socket.cc  p2p.cc
test/: CMakeLists.txt  CorrectnessTest.hpp  test_AllGatherMultiProcess.cpp  test_AllGatherMultiProcess.hpp  test_AllReduceAbort.cpp  test_AllReduceAbortMultiProcess.cpp  test_AllReduceAbortMultiProcess.hpp  test_AllReduceMultiProcess.cpp  test_AllReduceMultiProcess.hpp  test_AllToAllMultiProcess.cpp  test_AllToAllMultiProcess.hpp  test_BroadcastAbortMultiProcess.cpp  test_BroadcastAbortMultiProcess.hpp  test_BroadcastMultiProcess.cpp  test_BroadcastMultiProcess.hpp  test_CombinedCallsMultiProcess.cpp  test_CombinedCallsMultiProcess.hpp  test_GatherMultiProcess.cpp  test_GatherMultiProcess.hpp  test_GroupCallsMultiProcess.cpp  test_GroupCallsMultiProcess.hpp  test_ReduceMultiProcess.cpp  test_ReduceMultiProcess.hpp  test_ReduceScatter.cpp  test_ReduceScatterMultiProcess.cpp  test_ReduceScatterMultiProcess.hpp  test_ScatterMultiProcess.cpp  test_ScatterMultiProcess.hpp
